# Parallex-StrereoVisionSensor

./: CMakeLists.txt  README.md  build.sh  calibrate_stereo.py  capture_stereo.py  main.cpp  stereo_depth.py
include/: stereo_vision.h
src/: calibrate.cpp  depth_query.cpp  stereo_vision.cpp
